Add simple JWT generation after log in